partly fixed
