# user-auth-system/docs/swagger.json
@@ -27,7 +27,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "orders"
+                    "Заявки с материалами"
                 ],
                 "summary": "Получить список заказов",
                 "parameters": [
@@ -76,7 +76,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Управление пользователями"
                 ],
                 "summary": "Аутентификация пользователя",
                 "parameters": [
@@ -130,7 +130,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Управление пользователями"
                 ],
                 "summary": "Деаутентификация пользователя",
                 "responses": {
@@ -162,7 +162,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Управление пользователями"
                 ],
                 "summary": "Регистрация нового пользователя",
                 "parameters": [
